kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision13.sem

function Foo(): Integer {
  Integer."1"
}

interface Foo {
  a(): Integer
}
